<resources>
    <string name="app_name">ZohoTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kuthambakkam_chennai">Kuthambakkam,Chennai</string>
    <string name="current_location_time_zone">Current Location Time Zone</string>
    <string name="_24_c">24°C</string>
    <string name="min_temp">Min Temp</string>
    <string name="max_temp">Max Temp</string>
    <string name="sunrise">sunrise</string>
    <string name="wind">Wind</string>
    <string name="sunset">Sunset</string>
    <string name="todo">TODO</string>
    <string name="search">Search</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop .</string>
    <string name="read_more">Read More...</string>
</resources>