<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_file"
    tools:context=".WeatherFragment">


    <TextView
        android:id="@+id/current_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/kuthambakkam_chennai"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/last_updated_on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/current_location_time_zone"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/current_location"
        app:layout_constraintStart_toStartOf="@+id/current_location"
        app:layout_constraintTop_toBottomOf="@+id/current_location" />

    <TextView
        android:id="@+id/current_weather_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing=".2"
        android:text="@string/_24_c"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_temp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/current_weather_temp"
        app:layout_constraintTop_toBottomOf="@+id/current_weather_temp" />

    <TextView
        android:id="@+id/max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/max_temp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/current_weather_temp"
        app:layout_constraintTop_toBottomOf="@+id/current_weather_temp" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:text="@string/sunrise"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sunset"
        app:drawableStartCompat="@drawable/sun_rise_icon"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/wind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:drawablePadding="5dp"
        android:text="@string/wind"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sunset"
        app:drawableStartCompat="@drawable/wind_icon"
        app:drawableTint="@color/white" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="5dp"
        android:text="@string/sunset"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/wind"
        app:layout_constraintStart_toEndOf="@+id/sunrise"
        app:layout_constraintTop_toBottomOf="@+id/current_weather_temp"
        app:drawableStartCompat="@drawable/sun_set_icon"
        app:drawableTint="@color/white" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_baseline_auto_awesome_24"
        app:layout_constraintBottom_toTopOf="@+id/current_weather_temp"
        app:layout_constraintEnd_toEndOf="@+id/current_weather_temp"
        app:layout_constraintStart_toStartOf="@+id/current_weather_temp"
        app:layout_constraintTop_toBottomOf="@+id/last_updated_on"
        app:tint="@color/white"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>