<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/news_background"
    android:backgroundTint="@color/white"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/thumb_image_news_container"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitCenter"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/zoho_logo"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/title_news_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/todo"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/thumb_image_news_container"
        app:layout_constraintStart_toStartOf="@+id/thumb_image_news_container"
        app:layout_constraintTop_toBottomOf="@+id/thumb_image_news_container" />

    <TextView
        android:id="@+id/description_news_conatiner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop"
        app:layout_constraintEnd_toEndOf="@+id/title_news_container"
        app:layout_constraintStart_toStartOf="@+id/title_news_container"
        app:layout_constraintTop_toBottomOf="@+id/title_news_container" />

    <TextView
        android:id="@+id/read_more_news_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/read_more"
        android:textColor="@color/black"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/description_news_conatiner"
        app:layout_constraintTop_toBottomOf="@+id/description_news_conatiner" />

</androidx.constraintlayout.widget.ConstraintLayout>